refactor(carteira): migra presentation para injeção de dependência via construtor